Correct width and scrolling flicker on scroll content.

--- a/less/_ui.less
+++ b/less/_ui.less
@@ -39,9 +39,10 @@ body, .page {
     -moz-box-orient: vertical;
     box-orient: vertical;
     height:100%;
+    width: 100%;
+
     -webkit-box-align: stretch;
     -webkit-box-flex: 1;
-
 }
 
 .page {
@@ -61,6 +62,8 @@ body, .page {
 
     position: absolute;
     -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000px;
+    -webkit-transform: translate3d(0, 0, 0);
 }
 
 
@@ -93,6 +96,9 @@ body, .page {
 .scrollview-content {
     display:block;
     -webkit-box-flex:1;
+    -webkit-transform: translate3d(0, 0, 0);    
+    -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000px;
 }
 
 .hidden {
